databases/data/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        policy-type: "app"
    spec:
      securityContext:
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050

      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.2

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 3004
              protocol: TCP

          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-data

      restartPolicy: Always

      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
