databases/data/pgadmin/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
    - port: 3004
  selector:
    app: pgadmin
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.timourhomelab.org
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 3004
            path: /
            pathType: Prefix
